MovingObject WITH BUGS

--- a/gutenberg.vcxproj.filters
+++ b/gutenberg.vcxproj.filters
@@ -19,6 +19,9 @@
     <Filter Include="源文件\model">
       <UniqueIdentifier>{dd530d4d-4606-4fab-aa5b-e3a84297d13b}</UniqueIdentifier>
     </Filter>
+    <Filter Include="头文件\learnopengl">
+      <UniqueIdentifier>{686a762f-478c-4f52-bfe1-b2d1c0d91a0b}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\BulletWorld.cpp">
@@ -30,6 +33,9 @@
     <ClCompile Include="src\model\MovingObject.cpp">
       <Filter>源文件\model</Filter>
     </ClCompile>
+    <ClCompile Include="src\learnopengl\model.cpp">
+      <Filter>头文件\learnopengl</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\BulletWorld.h">
@@ -37,6 +43,24 @@
     </ClInclude>
     <ClInclude Include="src\model\MovingObject.h">
       <Filter>头文件\model</Filter>
+    </ClInclude>
+    <ClInclude Include="src\learnopengl\camera.h">
+      <Filter>头文件\learnopengl</Filter>
+    </ClInclude>
+    <ClInclude Include="src\learnopengl\mesh.h">
+      <Filter>头文件\learnopengl</Filter>
+    </ClInclude>
+    <ClInclude Include="src\learnopengl\model.h">
+      <Filter>头文件\learnopengl</Filter>
+    </ClInclude>
+    <ClInclude Include="src\learnopengl\shader.h">
+      <Filter>头文件\learnopengl</Filter>
+    </ClInclude>
+    <ClInclude Include="src\learnopengl\shader_m.h">
+      <Filter>头文件\learnopengl</Filter>
+    </ClInclude>
+    <ClInclude Include="src\learnopengl\shader_s.h">
+      <Filter>头文件\learnopengl</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
