--- a/gutenberg.vcxproj
+++ b/gutenberg.vcxproj
@@ -135,11 +135,18 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="src\BulletWorld.cpp" />
+    <ClCompile Include="src\learnopengl\model.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\model\MovingObject.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\BulletWorld.h" />
+    <ClInclude Include="src\learnopengl\camera.h" />
+    <ClInclude Include="src\learnopengl\mesh.h" />
+    <ClInclude Include="src\learnopengl\model.h" />
+    <ClInclude Include="src\learnopengl\shader.h" />
+    <ClInclude Include="src\learnopengl\shader_m.h" />
+    <ClInclude Include="src\learnopengl\shader_s.h" />
     <ClInclude Include="src\model\MovingObject.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
