fixed MovingObject.cpp's BUGS  (textures still have bugs)

--- a/gutenberg.vcxproj
+++ b/gutenberg.vcxproj
@@ -134,6 +134,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="include\glad\glad.c" />
     <ClCompile Include="src\BulletWorld.cpp" />
     <ClCompile Include="src\learnopengl\model.cpp" />
     <ClCompile Include="src\main.cpp" />
@@ -145,8 +146,6 @@
     <ClInclude Include="src\learnopengl\mesh.h" />
     <ClInclude Include="src\learnopengl\model.h" />
     <ClInclude Include="src\learnopengl\shader.h" />
-    <ClInclude Include="src\learnopengl\shader_m.h" />
-    <ClInclude Include="src\learnopengl\shader_s.h" />
     <ClInclude Include="src\model\MovingObject.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
