--- a/src/shader/CMakeLists.txt
+++ b/src/shader/CMakeLists.txt
@@ -4,4 +4,4 @@ project(Gutenberg_mechanism)
 file(GLOB SRCFILES *.cpp)
 include_directories(${CMAKE_SOURCE_DIR}/include)
 
-add_library(learnopengl STATIC ${SRCFILES})
+add_library(shader STATIC ${SRCFILES})
