--- a/src/model/CMakeLists.txt
+++ b/src/model/CMakeLists.txt
@@ -6,6 +6,6 @@ find_package(Bullet REQUIRED)
 file(GLOB SRCFILES *.cpp)
 
 add_library(model STATIC ${SRCFILES})
-target_include_directories(model PUBLIC ${BULLET_INCLUDE_DIR})
+target_include_directories(model PUBLIC ${BULLET_INCLUDE_DIRS})
 target_include_directories(model PUBLIC ${CMAKE_SOURCE_DIR}/include)
 target_compile_definitions(model PUBLIC ${BULLET_DEFINITIONS})
