add skybox and adjust objects' positions

--- a/gutenberg.vcxproj
+++ b/gutenberg.vcxproj
@@ -140,10 +140,12 @@
     <ClCompile Include="src\learnopengl\mesh.cpp" />
     <ClCompile Include="src\learnopengl\model.cpp" />
     <ClCompile Include="src\learnopengl\shader.cpp" />
+    <ClCompile Include="src\learnopengl\stb_image.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\model\MovingObject.cpp" />
     <ClCompile Include="src\model\StaticObject.cpp" />
     <ClCompile Include="src\shader\MultiLightShader.cpp" />
+    <ClCompile Include="src\shader\SkyboxShader.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\BulletWorld.h" />
@@ -152,9 +154,11 @@
     <ClInclude Include="src\learnopengl\mesh.h" />
     <ClInclude Include="src\learnopengl\model.h" />
     <ClInclude Include="src\learnopengl\shader.h" />
+    <ClInclude Include="src\learnopengl\stb_image.h" />
     <ClInclude Include="src\model\MovingObject.h" />
     <ClInclude Include="src\model\StaticObject.h" />
     <ClInclude Include="src\shader\MultiLightShader.h" />
+    <ClInclude Include="src\shader\SkyboxShader.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
