--- a/src/learnopengl/CMakeLists.txt
+++ b/src/learnopengl/CMakeLists.txt
@@ -1,7 +1,12 @@
 cmake_minimum_required(VERSION 3.0)
 project(Gutenberg_mechanism)
 
-file(GLOB SRCFILES *.cpp)
+set(SRCFILES
+	mesh.cpp
+	model.cpp
+    shader.cpp
+	${SRCFILES} 
+)
 include_directories(${CMAKE_SOURCE_DIR}/include)
 
 add_library(learnopengl STATIC ${SRCFILES})
